--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"php" : ">=7.1"
     },
 	"require-dev" : {
-		"phpunit/phpunit" : "^7.0"
+		"phpunit/phpunit" : "^7.0",
+		"php-coveralls/php-coveralls": "^2.1"
 	},
 	"autoload" : {
 		"psr-4" : {
