--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - composer install
 script:
   - mkdir -p build/logs
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --testsuite Complex
 after_script:
   - travis_retry vendor/bin/php-coveralls
   # or enable logging
